# hgvs-weaver

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  README.md  analysis8_4.txt  analysis8_5.txt  analyze_remaining_spdi.py  analyze_spdi_failures.py  analyze_unsupported.py  commits.txt  lcov.info  protein_regressions_all_history.txt  pyproject.toml  requirements-dev.txt  verify_spdi_equiv.py
.github/workflows/: release.yaml
benchmark_results/: history.json
docs/: requirements.txt
docs/source/: api.rst  conf.py  equivalence_logic.md
hgvs-weaver/: Cargo.toml
hgvs-weaver/src/: altseq.rs  altseq_to_hgvsp.rs  analogous_edit.rs  cigar.rs  coords.rs  data.rs  edits.rs  equivalence.rs  error.rs  fmt.rs  grammar.pest  lib.rs  mapper.rs  parser.rs  sequence.rs  structs.rs  transcript_mapper.rs  utils.rs
hgvs-weaver/tests/: analogous_test.rs  bug_repro_test.rs  decompose_test.rs  equivalence_test.rs  gauntlet_test.rs  mapping_test.rs  normalization_test.rs  regression_test.rs  sanity_parity_test.rs  spec_summary_test.rs  test_regressions.rs  test_shift.rs  toy_data_test.rs
scripts/: analyze_validation.py  categorize_remaining.py  classify_failures.py  detect_regressions.py  extract_category.py  extract_delins.py  extract_regression_data.py  fetch_gff.py  find_all_regressions.py  historical_bench.py  split_sequences.py  update_readme_performance.py  verify_with_real_data.py
src/: lib.rs
tests/: regressions.rs  test_api.py  test_equivalence.py  test_hgvs_eval_integration.py  test_mavehgvs_compliance.py
weaver/: __init__.py  _weaver.pyi
(+11 files in other folders)
